@@ -1,3 +1,9 @@
+2008-03-14  Richard Hult  <richard@imendio.com>
+
+	* gdk/quartz/gdkwindow-quartz.c:
+	(gdk_window_quartz_process_all_updates): Patch from Paul Davis,
+	only flush the toplevel once per update.
+
 2008-03-13  Federico Mena Quintero  <federico@novell.com>
 
 	* gtk/gtkfilechooserentry.c (create_completion_feedback_window):
